--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-md-6 col-ms-6 py-2">
+                            <!-- <div class="col-lg-4 col-md-6 col-ms-6 py-2">
                                 <div class="item-project" title="LÂM THANH TÙNG">
                                     <div class="image-project">
                                         <img src="./images/project4.png"  alt="LÂM THANH TÙNG" title="LÂM THANH TÙNG">
@@ -353,7 +353,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                        </div>
                     </div>
                 </div>
