--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>TVQuang | Portfolio</title>
     <link id='favicon' rel="shortcut icon" href="./avt-400x400.png" type="image/x-png">
     <link rel="stylesheet" href="./css/fontawesome611/all.css">
-    <link rel="stylesheet" href="./css/bootstrap.css">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/font.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -444,11 +444,11 @@
 
 
 
-    <script src="./js/jquery.js"></script>
+    <script src="./js/jquery.min.js"></script>
     <script src="./js/jquery.pixelentity.shiner.js"></script>
-    <script src="./js/vanilla-tilt.js"></script>
-    <script src="./js/typed.js"></script>
-    <script src="./js/three.js"></script>
+    <script src="./js/vanilla-tilt.min.js"></script>
+    <script src="./js/typed.min.js"></script>
+    <script src="./js/three.min.js"></script>
     <script src="./js/apps.js"></script>
     
 </body>
