--- a/index.html
+++ b/index.html
@@ -10,6 +10,27 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/font.css">
     <link rel="stylesheet" href="./css/style.css">
+
+    <!-- Facebook -->
+    <meta property="og:type" content="" />
+    <meta property="og:site_name" content="Trần Văn Quang" />
+    <meta property="og:title" content="Portfolio" />
+    <meta property="og:description" content="Trần Văn Quang || Portfolio" />
+    <meta property="og:url" content="https://2kquang.github.io/Portfolio/" />
+    <meta property="og:image" content="./images/avt-400x400.png" />
+    <meta property="og:image:alt" content="Portfolio" />
+    <meta property="og:image:type" content="png" />
+    <meta property="og:image:width" content="400" />
+    <meta property="og:image:height" content="400" />
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="tvquang.19i@gmail.com" />
+    <meta name="twitter:creator" content="Trần Văn Quang" />
+    <meta property="og:url" content="https://2kquang.github.io/Portfolio/" />
+    <meta property="og:title" content="Portfolio" />
+    <meta property="og:description" content="Trần Văn Quang || Portfolio" />
+    <meta property="og:image" content="./images/avt-400x400.png" />
+
 </head>
 <body>
     <div class="content_main">
