--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="tvquang, php dev ,backend dev, front-end dev , full stack dev, personal portfolio lifecodes, portfolio design, portfolio website, personal portfolio , portfolio" />
     <title>TVQuang | Portfolio</title>
-    <link id='favicon' rel="shortcut icon" href="./avt-400x400.png" type="image/x-png">
+    <link id='favicon' rel="shortcut icon" href="./images/avt-400x400.png" type="image/x-png">
     <link rel="stylesheet" href="./css/fontawesome611/all.css">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/font.css">
@@ -370,7 +370,7 @@
                                             <div class="item-desc">+ pop up</div>
                                         </div>
                                         <div class="btn-project">
-                                            <a href="http://evisavietnam-24h.com/" target="_blank">Links website</a>
+                                            <a href="http://niksencaffe.com/" target="_blank">Links website</a>
                                         </div>
                                     </div>
                                 </div>
