--- a/index.html
+++ b/index.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi|en">
 <head>
+    <!-- UTF-8 -->
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="keywords" content="tvquang, php dev ,backend dev, front-end dev , full stack dev, personal portfolio lifecodes, portfolio design, portfolio website, personal portfolio , portfolio" />
     <title>TVQuang | Portfolio</title>
     <link id='favicon' rel="shortcut icon" href="./images/avt-400x400.png" type="image/x-png">
-    <link rel="stylesheet" href="./css/fontawesome611/all.css">
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/font.css">
-    <link rel="stylesheet" href="./css/style.css">
+
+
+    <!-- Robots -->
+    <meta name="robots" content="noodp,index,follow" />
+    <!-- GEO -->
+    <meta name="geo.region" content="VN" />
+    <meta name="geo.placename" content="Đà Nẵng" />
+    <meta name="geo.position" content="15.9744639;108.2521978" />
+    <meta name="ICBM" content="15.9744639 , 108.2521978" />
+    <!-- Author - Copyright -->
+    <meta name='revisit-after' content='1 days' />
+    <meta name="author" content="TVQuang | Portfolio" />
+    <meta name="copyright" content="tvquang.19i@gmail.com" />
+
 
     <!-- Facebook -->
     <meta property="og:type" content="" />
@@ -19,7 +31,7 @@
     <meta property="og:url" content="https://2kquang.github.io/Portfolio/" />
     <meta property="og:image" content="./images/avt-400x400.png" />
     <meta property="og:image:alt" content="Portfolio" />
-    <meta property="og:image:type" content="png" />
+    <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="400" />
     <meta property="og:image:height" content="400" />
     <!-- Twitter -->
@@ -30,6 +42,16 @@
     <meta property="og:title" content="Portfolio" />
     <meta property="og:description" content="Trần Văn Quang || Portfolio" />
     <meta property="og:image" content="./images/avt-400x400.png" />
+    <!-- Chống đổi màu trên IOS -->
+    <meta name="format-detection" content="telephone=no">
+    <!-- Canonical -->
+    <link rel="canonical" href="https://2kquang.github.io/Portfolio/" />
+
+    <!-- Css -->
+    <link rel="stylesheet" href="./css/fontawesome611/all.css">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/font.css">
+    <link rel="stylesheet" href="./css/style.css">
 
 </head>
 <body>
