--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         </div>
                         <ul class="social list-unstyled p-0 m-0 d-flex align-items-center justify-content-start flex-wrap">
                             <li class="align-top mr-1 hvr-float-shadow">
-                                <a href="https://www.facebook.com/TVQuang/" target="_blank"><i class="fa-brands fa-facebook fa-2x"></i></a>
+                                <a href="https://www.facebook.com/Focus.0804/" target="_blank"><i class="fa-brands fa-facebook fa-2x"></i></a>
                             </li>
                             <li class="align-top mr-1 hvr-float-shadow">
                                 <a href="https://zalo.me/0397391045" target="_blank"><img src="./images/zalo-logo.png" width="55px" height="55px" alt=""></a>
@@ -469,7 +469,7 @@
                             </div>
                             <ul class="social list-unstyled p-0 m-0 d-flex align-items-center justify-content-start flex-wrap py-3">
                                 <li class="align-top mr-1 hvr-float-shadow">
-                                    <a href="https://www.facebook.com/TVQuang/" target="_blank"><i class="fa-brands fa-facebook fa-2x"></i></a>
+                                    <a href="https://www.facebook.com/Focus.0804/" target="_blank"><i class="fa-brands fa-facebook fa-2x"></i></a>
                                 </li>
                                 <li class="align-top mr-1 hvr-float-shadow">
                                     <a href="https://zalo.me/0397391045" target="_blank"><img src="./images/zalo-logo.png" width="55px" height="55px" alt=""></a>
